--- a/Page 2/HTML/GuittetOlivierPage2.html
+++ b/Page 2/HTML/GuittetOlivierPage2.html
@@ -2,21 +2,21 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="pagecss.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/pagecss.css">
 </head>
 
 <body>
 
-    <img id=fond src="photofonddecran.jpg">
+    <img id=fond src="../Photo/photofonddecran.jpg">
     <div id="main">
         <h1>Mon Hobbie: Le Sport</h1>
 
         <ul class="menu">
             <li>
-                <a href="../Page 1/GuittetOlivierPage1.html">Mon site Web</a>
+                <a href="../../Page 1/GuittetOlivierPage1.html">Mon site Web</a>
             </li>
             <li>
-                <a href="../Page 1/Page Anglais.html">My Web Site</a>
+                <a href="../../Page 1/Page Anglais.html">My Web Site</a>
             </li>
             <div class="dropdown">
                 <button class="dropbtn"><a href="#L'Escalade">Escalade</a></button>
@@ -72,7 +72,7 @@
                 <a name="LeBloc">- Le Bloc</a>
             </cfo>
             <cfod class="c31">
-                <img id="escalade1" src="escalade1.jpeg" style=" width: 250px ;height: 250px ">
+                <img id="escalade1" src="../Photo/escalade1.jpeg" style=" width: 250px ;height: 250px ">
                 <cfo class="c4">
                     Le Bloc peut se pratiquer en intérieur comme en exterieur cela consite a monter sans assurage sur
                     une hauteur entre 2m et 4m voir 5m avec des tapis pour la réception. Le Bloc existe depuis les
@@ -83,13 +83,13 @@
                     Grimper un Bloc c'est travaillez des mouvement qui nécéssitent puissance, force et dynamique sur une
                     courte période.
                 </cfo>
-                <img id="escalade2" src="escalade2.jpg" style=" width: 250px ;height: 250px ">
+                <img id="escalade2" src="../Photo/escalade2.jpg" style=" width: 250px ;height: 250px ">
             </cfod>
             <cfo class="c3">
                 <a name="LaVitesse">- La Vitesse</a>
             </cfo>
             <cfo class="c31">
-                <img id="Vitesse1" src="Vitesse1.jpg" style=" width: 250px ;height: 250px ">
+                <img id="Vitesse1" src="../Photo/Vitesse1.jpg" style=" width: 250px ;height: 250px ">
                 <cfo class="c4">
                     La Vitesse comme son nom le dit a pour but de monter le mur d'escalade le plus vite possible sur une
                     voie type
@@ -100,13 +100,13 @@
                     une fois que le grimpeur a touché le bouton "champigon" tout en haut du mur. Pour éviter les
                     accidents, les grimpeurs sont assurés en moulinette par une machine, donc depuis le haut du mur.
                 </cfo>
-                <img id="Vitesse2" src="Vitesse2.jpg" style=" width: 250px ;height: 250px ">
+                <img id="Vitesse2" src="../Photo/Vitesse2.jpg" style=" width: 250px ;height: 250px ">
             </cfo>
             <cfo class="c3">
                 <a name="LaDifficulté">- La Difficulté</a>
             </cfo>
             <cfo class="c31">
-                <img id="Difficulté1" src="Difficulté1.jpg" style=" width: 250px ;height: 250px ">
+                <img id="Difficulté1" src="../Photo/Difficulte1.jpg" style=" width: 250px ;height: 250px ">
                 <cfo class="c4">
                     La Difficulté peut se pratiquer en intérieur comme en extèrieur. Cela consite a monter sur une
                     paroie en étant assurer avec une corde. Il existe deux types de grimpe: La grimpe en-tête et la
@@ -118,13 +118,13 @@
                     dangeureuse. Pour faire de la difficulté il faut etre assuré par une personne cela nécéssite d'avoir
                     une grande confiance en la personne car elle est responsable de votre vie.
                 </cfo>
-                <img id="Difficulté2" src="Difficulté2.jpg" style=" width: 250px ;height: 250px ">
+                <img id="Difficulté2" src="../Photo/Difficulte2.jpg" style=" width: 250px ;height: 250px ">
             </cfo>
             <cfo class="c3">
                 <a name="Grimper">- Pourquoi j'aime Grimper ?</a>
             </cfo>
             <cfo class="c31">
-                <img id="escalade" src="escalade.jpeg" style=" width: 250px ;height: 250px ">
+                <img id="escalade" src="../Photo/escalade.jpeg" style=" width: 250px ;height: 250px ">
                 <cfo class="c4">
                     L'escalade est mon sport principale: je grimpe depuis que j'ai l'age de 10ans j'ai toujours adoré
                     l'escalde car c'est un sport ou on a une forte adrénaline, on doit toujours se fixer des objectifs
@@ -135,7 +135,7 @@
                     communauté des grimpeurs est vraiment une communauté ouverte et toujours pret à aider pour
                     progresse.
                 </cfo>
-                <img id="escalade4" src="escalade4.jpg" style=" width: 250px ;height: 250px ">
+                <img id="escalade4" src="../Photo/escalade4.jpg" style=" width: 250px ;height: 250px ">
             </cfo>
         </cfo>
 
@@ -147,7 +147,7 @@
                 <a name="La Randonné à la journé:">La Randonné à la journé:</a>
             </dfo>
             <dfo class="d2">
-                <img id="Randonné" src="Randonné2.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
+                <img id="Randonné" src="../Photo/Randonne2.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
                 <dfo class="d31">
                     La Randonné à la journé consiste a partir marcher à la journée sa peut-être une balade en famille,
                     une cueillete de champignons ou encore une découverte de paysage. Ces marches sont souvent effectuer
@@ -155,13 +155,13 @@
                     la randonnée à la journée a part avoir de l'eau et des chaussures prévent pour une activité sportive
                     extèrieur.
                 </dfo>
-                <img id="Randonnée" src="Randonné4.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
+                <img id="Randonnée" src="../Photo/Randonne4.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
             </dfo>
             <dfo class="d21">
                 <a name="La Randonné en itinérance:">La Randonné en itinérance:</a>
             </dfo>
             <dfo class="d2">
-                <img id="escalade2" src="randonnée1.JPG" style=" width: 250px ;height: 250px; margin: 10px; ">
+                <img id="escalade2" src="../Photo/randonne1.JPG" style=" width: 250px ;height: 250px; margin: 10px; ">
                 <dfo class="d31">
                     La Randonné en itinérence consiste a partir marché plusieurs jours, semaine, mois voir années
                     d'affiler et de changer d'hébergements chaque soir. C'est partir d'un point A et d'aller à un point
@@ -170,13 +170,13 @@
                     (Tour du Mont Blanc,....) ou encore des chemins (Saint Jacques de Compostelle,...). Mais on peut
                     aussi faire un parcours qu'on a crée soit même.
                 </dfo>
-                <img id="Randonné" src="Randonné6.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
+                <img id="Randonné" src="../Photo/Randonne6.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
             </dfo>
             <dfo class="d21">
                 <a name="Pourquoi j'aime faire de la Randonnés:">Pourquoi j'aime faire de la Randonnés:</a>
             </dfo>
             <dfo class="d2">
-                <img id="Randonné3" src="Randonné3 (1).jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
+                <img id="Randonné3" src="../Photo/Randonne3.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
                 <dfo class="d31">
                     Je randonne depuis que je suis petit se qui fait qu'aujourdhui j'ai fait un grand nombre de randonné
                     comme le Tour du Mont-Blanc, La Berlinerhohenweg, l'Adlerweg.... J'ai toujours aimé marcher, comme
@@ -187,7 +187,7 @@
                     les refuges est
                     vraiment sympatique.
                 </dfo>
-                <img id="Randonné5" src="Randonné5.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
+                <img id="Randonné5" src="../Photo/Randonne5.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
             </dfo>
         </dfo>
 
@@ -204,7 +204,7 @@
                     <a name="Le Sprint:">Le Sprint:</a>
                 </efo>
                 <efo class="e31">
-                    <img id="Course1" src="Course1.jpeg" style=" width: 300px ;height: 250px ">
+                    <img id="Course1" src="../Photo/Course1.jpeg" style=" width: 300px ;height: 250px ">
                     <efo class="e311">
                         Course sur une courte distance. on distingue deux types de sprint : le sprint court
                         sur 100
@@ -220,13 +220,13 @@
                         sprints et plus courtes que les courses de fond. Il existe trois type de course de Demi-Fond: le
                         800 mètres, le 1 500 mètres et le 3000 mètres steeple.
                     </efo>
-                    <img id="Course2" src="Course2.jpg" style=" width: 300px ;height: 250px ">
+                    <img id="Course2" src="../Photo/Course2.jpg" style=" width: 300px ;height: 250px ">
                 </efo>
                 <efo class="e1">
                     <a name="La Course de Fond:">La Course de Fond:</a>
                 </efo>
                 <efo class="e31">
-                    <img id="Course3" src="Course3.jpg" style=" width: 300px ;height: 250px ">
+                    <img id="Course3" src="../Photo/Course3.jpg" style=" width: 300px ;height: 250px ">
                     <efo class="e311">
                         Qu'on appelle aussi course longue distance ou encore course d'endurance. Il
                         existe trois principaux type: le 5Km, le 10 km et le semi-marathon 21km.
@@ -243,13 +243,13 @@
                         Marathon est une course sur 42km. Il exise de prestigieux marathon par exemple le marathon de
                         Boston ou celui de Berlin etc.
                     </efo>
-                    <img id="Course4" src="Course4.jpeg" style=" width: 300px ;height: 250px ">
+                    <img id="Course4" src="../Photo/Course4.jpeg" style=" width: 300px ;height: 250px ">
                 </efo>
                 <efo class="e1">
                     <a name="Le Trail:">Le Trail:</a>
                 </efo>
                 <efo class="e31">
-                    <img id="Couse5" src="Course5.jpeg" style=" width: 300px ;height: 250px ">
+                    <img id="Couse5" src="../Photo/Course5.jpeg" style=" width: 300px ;height: 250px ">
                     <efo class="e311">
                         C'est une course qui se pratique sur des chemins ou sur des sentiers. Il existe
                         plusieurs type de Trail: le cross-country qui se pratique sur une distance de 3 à 12km. A
@@ -274,8 +274,8 @@
 
         <footer>
             <p>Vous pouvez me contacter via mon adresse Mail professionnel et mon instagram ci-dessous::</p>
-            <a href="mailto:og67guittetpro@gmail.com"><img src="gmail.png" style=" width: 60px ;height: 60px "></a>
-            <a href="https://www.instagram.com/olivier_guittet/"><img src="instagram.jfif"
+            <a href="mailto:og67guittetpro@gmail.com"><img src="../Photo/gmail.png" style=" width: 60px ;height: 60px "></a>
+            <a href="https://www.instagram.com/olivier_guittet/"><img src="../Photo/instagram.jfif"
                     style=" width: 60px ;height: 60px "></a>
         </footer>
     </div>
