--- a/Page 2/HTML/GuittetOlivierPage2.html
+++ b/Page 2/HTML/GuittetOlivierPage2.html
@@ -274,7 +274,8 @@
 
         <footer>
             <p>Vous pouvez me contacter via mon adresse Mail professionnel et mon instagram ci-dessous::</p>
-            <a href="mailto:og67guittetpro@gmail.com"><img src="../Photo/gmail.png" style=" width: 60px ;height: 60px "></a>
+            <a href="mailto:og67guittetpro@gmail.com"><img src="../Photo/gmail.png"
+                    style=" width: 60px ;height: 60px "></a>
             <a href="https://www.instagram.com/olivier_guittet/"><img src="../Photo/instagram.jfif"
                     style=" width: 60px ;height: 60px "></a>
         </footer>
