--- a/Page 1/HTML/Français/GuittetOlivierPage1.html
+++ b/Page 1/HTML/Français/GuittetOlivierPage1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="pagecss.css">
+    <link rel="stylesheet" type="text/css" href="../../CSS/pagecss.css">
 </head>
 
 <body>
@@ -12,13 +12,13 @@
 
     <ul class="menu">
         <li>
-            <a href="../Page 2/GuittetOlivierPage2.html">Mes Hobbies</a>
+            <a href="../../../Page 2/HTML/GuittetOlivierPage2.html">Mes Hobbies</a>
         </li>
         <li>
             <a href="https://e-portfolio.uha.fr/">Portfolio</a>
         </li>
         <li>
-            <a href="Page Anglais.html">Mon site Internet(Anglais)</a>
+            <a href="../Anglais/Page Anglais.html">My Web Site(Anglais)</a>
         </li>
         <li>
             <a href="https://github.com/Thesee67">GitHub</a>
@@ -42,7 +42,7 @@
     <bdi>
         <h2>Mon Histoire</h2>
         <pife class="pife">
-            <img id=fond src="photo1.jpg">
+            <img id=fond src="../../Photo/photo1.jpg">
             <paragraphe class="C">
                 <paragraphe class="C1">
                     Parcours Personnel:
@@ -80,12 +80,12 @@
                     de l'informatique ce que je préfère.
                 </paragraphe>
             </paragraphe>
-            <img id=fond src="photo2.jpg">
+            <img id=fond src="../../Photo/photo2.jpg">
         </beta>
 
         <h4>Mes Objectfs</h4>
         <Delta class="Delta">
-            <img id=photo3 src="photo3.jpg">
+            <img id=photo3 src="../../Photo/photo3.jpg">
             <paragraphe class="E">
                 <paragraphe class="E1">
                     Objectifs Personnel:
@@ -98,13 +98,13 @@
                     une spécialité en cybersécurité soit d'entrer sur le monde du travail.
                 </paragraphe>
             </paragraphe>
-            <img id=photo3 src="photo4.jpg">
+            <img id=photo3 src="../../Photo/photo4.jpg">
         </Delta>
     </bdi>
 
     <footer>
         <p>Vous pouvez me contacter via mon adresse Mail professionnel ci-dessous::</p>
-        <a href="mailto:og67guittetpro@gmail.com"><img src="gmail.png" style=" width: 60px ;height: 60px "></a>
+        <a href="mailto:og67guittetpro@gmail.com"><img src="../../Photo/gmail.png" style=" width: 60px ;height: 60px "></a>
     </footer>
 
 
