--- a/Page 2/HTML/GuittetOlivierPage2.html
+++ b/Page 2/HTML/GuittetOlivierPage2.html
@@ -13,10 +13,10 @@
 
         <ul class="menu">
             <li>
-                <a href="../../Page 1/GuittetOlivierPage1.html">Mon site Web</a>
+                <a href="../../Page 1/HTML/Français/GuittetOlivierPage1.html">Mon site Web</a>
             </li>
             <li>
-                <a href="../../Page 1/Page Anglais.html">My Web Site</a>
+                <a href="../../Page 1/HTML/Anglais/Page Anglais.html">My Web Site</a>
             </li>
             <div class="dropdown">
                 <button class="dropbtn"><a href="#L'Escalade">Escalade</a></button>
