--- a/Page 2/HTML/GuittetOlivierPage2.html
+++ b/Page 2/HTML/GuittetOlivierPage2.html
@@ -161,7 +161,7 @@
                 <a name="La Randonné en itinérance:">La Randonné en itinérance:</a>
             </dfo>
             <dfo class="d2">
-                <img id="escalade2" src="../Photo/randonne1.JPG" style=" width: 250px ;height: 250px; margin: 10px; ">
+                <img id="escalade2" src="../Photo/Randonne1.JPG" style=" width: 250px ;height: 250px; margin: 10px; ">
                 <dfo class="d31">
                     La Randonné en itinérence consiste a partir marché plusieurs jours, semaine, mois voir années
                     d'affiler et de changer d'hébergements chaque soir. C'est partir d'un point A et d'aller à un point
