--- a/Index.html
+++ b/Index.html
@@ -7,36 +7,39 @@
 
 <body>
 
+    <header>
+        <div class="overlay">
+            <h1>Olivier Guittet</h1>
 
-    <h1>Olivier Guittet</h1>
+            <ul class="menu">
+                <li>
+                    <a href="../../../Page 2/HTML/GuittetOlivierPage2.html">Mes Hobbies</a>
+                </li>
+                <li>
+                    <a href="https://e-portfolio.uha.fr/">Portfolio</a>
+                </li>
+                <li>
+                    <a href="../Anglais/Page Anglais.html">My Web Site(Anglais)</a>
+                </li>
+                <li>
+                    <a href="https://github.com/Thesee67">GitHub</a>
+                </li>
+            </ul>
 
-    <ul class="menu">
-        <li>
-            <a href="../../../Page 2/HTML/GuittetOlivierPage2.html">Mes Hobbies</a>
-        </li>
-        <li>
-            <a href="https://e-portfolio.uha.fr/">Portfolio</a>
-        </li>
-        <li>
-            <a href="../Anglais/Page Anglais.html">My Web Site(Anglais)</a>
-        </li>
-        <li>
-            <a href="https://github.com/Thesee67">GitHub</a>
-        </li>
-    </ul>
+            <article class="b">
+                <article class="b1">
+                    Bonjour Je m'apple Guittet Olivier et voici Mon Site Web
+                </article>
 
-    <article class="b">
-        <article class="b1">
-            Bonjour Je m'apple Guittet Olivier et voici Mon Site Web
-        </article>
-
-        <article class="b2">
-            Sur Ce Site Web vous trouverez des informations sur mes activités professionnel et personnels.
-        </article>
-        <article class="b3">
-            ci-dessus le lien vous pouvez acceder au informations sur mes hobbies.
-        </article>
-    </article>
+                <article class="b2">
+                    Sur Ce Site Web vous trouverez des informations sur mes activités professionnel et personnels.
+                </article>
+                <article class="b3">
+                    ci-dessus le lien vous pouvez acceder au informations sur mes hobbies.
+                </article>
+            </article>
+        </div>
+    </header>
 
 
     <bdi>
@@ -104,7 +107,8 @@
 
     <footer>
         <p>Vous pouvez me contacter via mon adresse Mail professionnel ci-dessous::</p>
-        <a href="mailto:og67guittetpro@gmail.com"><img src="../../Photo/gmail.png" style=" width: 60px ;height: 60px "></a>
+        <a href="mailto:og67guittetpro@gmail.com"><img src="../../Photo/gmail.png"
+                style=" width: 60px ;height: 60px "></a>
     </footer>
 
 
