--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="../../CSS/pagecss.css">
+    <link rel="stylesheet" type="text/css" href="Page 1/CSS/pagecss.css">
 </head>
 
 <body>
@@ -13,16 +13,16 @@
 
             <ul class="menu">
                 <li>
-                    <a href="../../../Page 2/HTML/GuittetOlivierPage2.html">Mes Hobbies</a>
+                    <a href="Page 2/HTML/GuittetOlivierPage2.html">Mes Hobbies</a>
                 </li>
                 <li>
                     <a href="https://e-portfolio.uha.fr/">Portfolio</a>
                 </li>
                 <li>
-                    <a href="../Anglais/Page Anglais.html">My Web Site(Anglais)</a>
+                    <a href="Page 1/HTML/Anglais/Page Anglais.html">My Web Site(Anglais)</a>
                 </li>
                 <li>
-                    <a href="https://github.com/Thesee67">GitHub</a>
+                    <a href="https://github.com/These67">GitHub</a>
                 </li>
             </ul>
 
@@ -45,7 +45,7 @@
     <bdi>
         <h2>Mon Histoire</h2>
         <pife class="pife">
-            <img id=fond src="../../Photo/photo1.jpg">
+            <img id=fond src="Page 1/Photo/photo1.jpg">
             <paragraphe class="C">
                 <paragraphe class="C1">
                     Parcours Personnel:
@@ -83,12 +83,12 @@
                     de l'informatique ce que je préfère.
                 </paragraphe>
             </paragraphe>
-            <img id=fond src="../../Photo/photo2.jpg">
+            <img id=fond src="Page 1/Photo/photo2.jpg">
         </beta>
 
         <h4>Mes Objectfs</h4>
         <Delta class="Delta">
-            <img id=photo3 src="../../Photo/photo3.jpg">
+            <img id=photo3 src="Page 1/Photo/photo3.jpg">
             <paragraphe class="E">
                 <paragraphe class="E1">
                     Objectifs Personnel:
@@ -101,13 +101,13 @@
                     une spécialité en cybersécurité soit d'entrer sur le monde du travail.
                 </paragraphe>
             </paragraphe>
-            <img id=photo3 src="../../Photo/photo4.jpg">
+            <img id=photo3 src="Page 1/Photo/photo4.jpg">
         </Delta>
     </bdi>
 
     <footer>
         <p>Vous pouvez me contacter via mon adresse Mail professionnel ci-dessous::</p>
-        <a href="mailto:og67guittetpro@gmail.com"><img src="../../Photo/gmail.png"
+        <a href="mailto:og67guittetpro@gmail.com"><img src="Page 1/Photo/gmail.png"
                 style=" width: 60px ;height: 60px "></a>
     </footer>
 
