--- a/Page 1/HTML/Anglais/Page Anglais.html
+++ b/Page 1/HTML/Anglais/Page Anglais.html
@@ -7,36 +7,39 @@
 
 <body>
 
+    <header>
+        <div class="overlay">
+            <h1>Olivier Guittet</h1>
 
-    <h1>Olivier Guittet</h1>
+            <ul class="menu">
+                <li>
+                    <a href="../../../Page 2/HTML/GuittetOlivierPage2.html">My Hobbies</a>
+                </li>
+                <li>
+                    <a href="https://e-portfolio.uha.fr/">Portfolio</a>
+                </li>
+                <li>
+                    <a href="../Français/GuittetOlivierPage1.html">Mon Site Web(Français)</a>
+                </li>
+                <li>
+                    <a href="https://github.com/Thesee67">GitHub</a>
+                </li>
+            </ul>
 
-    <ul class="menu">
-        <li>
-            <a href="../../../Page 2/HTML/GuittetOlivierPage2.html">My Hobbies</a>
-        </li>
-        <li>
-            <a href="https://e-portfolio.uha.fr/">Portfolio</a>
-        </li>
-        <li>
-            <a href="../Français/GuittetOlivierPage1.html">Mon Site Web(Français)</a>
-        </li>
-        <li>
-            <a href="https://github.com/Thesee67">GitHub</a>
-        </li>
-    </ul>
+            <article class="b">
+                <article class="b1">
+                    Hello I am Guittet Olivier and this is my website
+                </article>
 
-    <article class="b">
-        <article class="b1">
-            Hello I am Guittet Olivier and this is my website
-        </article>
-
-        <article class="b2">
-            On this website you will find information about my professional and personal activities.
-        </article>
-        <article class="b3">
-            Above the link you can access the information about my hobbies.
-        </article>
-    </article>
+                <article class="b2">
+                    On this website you will find information about my professional and personal activities.
+                </article>
+                <article class="b3">
+                    Above the link you can access the information about my hobbies.
+                </article>
+            </article>
+        </div>
+    </header>
 
 
     <bdi>
@@ -46,17 +49,21 @@
             <paragraphe class="C">
                 <paragraphe class="C1">
                     Personal background:
-                    My name is Guittet Olivier, i was born on 17 November 2004 in Wissembourg, a small town in the north
+                    My name is Guittet Olivier, i was born on 17 November 2004 in Wissembourg, a small town in
+                    the north
                     of the Bas-Rhin.
-                    In the north of the Bas-Rhin. I live in Soultz sous Foret, a village in the Bas-Rhin. I have several
+                    In the north of the Bas-Rhin. I live in Soultz sous Foret, a village in the Bas-Rhin. I have
+                    several
                     hobbies, the
                     trumpet which i have been playing since i was 8 years old.
-                    I also like history and geopolitics and of course electro-technology and computers. I also have
+                    I also like history and geopolitics and of course electro-technology and computers. I also
+                    have
                     other hobbies that you can discover on the page my hobbies.
                 </paragraphe>
                 <paragraphe class="C2">
                     Academic background :
-                    From kindergarten to secondary school i followed a bilingual pathway where i obtained my brevet in
+                    From kindergarten to secondary school i followed a bilingual pathway where i obtained my
+                    brevet in
                     French and
                     German and my A2 certification in German. At the Lycée Stanislas in Wissembourg i then
                     did
@@ -71,13 +78,20 @@
             <paragraphe class="D">
                 <paragraphe class="D1">
                     I joined the BUT Networks and Telecoms because i have always been interested in electrical
-                    engineering and computing. My grandfather was an electrical engineering teacher and my father is a
-                    laser technician. I have been immersed in electrical engineering since i was a child. In collège, i
-                    lost interest. Then, in seconde of lycée, i got interested again and discovered programming in
-                    Python and C. At the same time, i did some basic electrical assembly with my grandfather. In the
-                    same year i did a voluntary internship at the Elektronikzentrum of the Bundeswehr in Bad Bergzabern.
-                    I went into STI2D and got really interested. Then i decided to apply to the BUT RT because i was
-                    very interested in cyber security and there was both electrical engineering and computer science,
+                    engineering and computing. My grandfather was an electrical engineering teacher and my
+                    father is a
+                    laser technician. I have been immersed in electrical engineering since i was a child. In
+                    collège, i
+                    lost interest. Then, in seconde of lycée, i got interested again and discovered programming
+                    in
+                    Python and C. At the same time, i did some basic electrical assembly with my grandfather. In
+                    the
+                    same year i did a voluntary internship at the Elektronikzentrum of the Bundeswehr in Bad
+                    Bergzabern.
+                    I went into STI2D and got really interested. Then i decided to apply to the BUT RT because i
+                    was
+                    very interested in cyber security and there was both electrical engineering and computer
+                    science,
                     which i prefer.
                 </paragraphe>
             </paragraphe>
@@ -90,11 +104,14 @@
             <paragraphe class="E">
                 <paragraphe class="E1">
                     Personal objectives:
-                    My goals are to succeed in my professional objectives but also to pass my diploma of mountain
-                    leader. I would also like to do some long hikes like Santiago de Compostela or the GR20. I would
+                    My goals are to succeed in my professional objectives but also to pass my diploma of
+                    mountain
+                    leader. I would also like to do some long hikes like Santiago de Compostela or the GR20. I
+                    would
                     also like to climb the El Capitan cliff in Yosemite Park in the USA.
                     Professional goals:
-                    My first goal is to join the ICS. Then either to join an engineering school with a specialization in
+                    My first goal is to join the ICS. Then either to join an engineering school with a
+                    specialization in
                     cybersecurity or to enter the working world.
                 </paragraphe>
             </paragraphe>
@@ -104,7 +121,8 @@
 
     <footer>
         <p>Vous pouvez me contacter via mon adresse Mail professionnel ci-dessous::</p>
-        <a href="mailto:og67guittetpro@gmail.com"><img src="../../Photo/gmail.png" style=" width: 60px ;height: 60px "></a>
+        <a href="mailto:og67guittetpro@gmail.com"><img src="../../Photo/gmail.png"
+                style=" width: 60px ;height: 60px "></a>
     </footer>
 
 
