--- a/Index.html
+++ b/Index.html
@@ -31,10 +31,10 @@
                     Bonjour Je m'apple Guittet Olivier et voici Mon Site Web
                 </article>
 
-                <article class="b2">
+                <article class="b1">
                     Sur Ce Site Web vous trouverez des informations sur mes activités professionnel et personnels.
                 </article>
-                <article class="b3">
+                <article class="b1">
                     ci-dessus le lien vous pouvez acceder au informations sur mes hobbies.
                 </article>
             </article>
@@ -47,7 +47,7 @@
         <pife class="pife">
             <img id=fond src="Page 1/Photo/photo1.jpg">
             <paragraphe class="C">
-                <paragraphe class="C1">
+                <paragraphe class="b1">
                     Parcours Personnel:
                     Je m’appelle Guittet Olivier, Je suis née le 17 novembre 2004 à Wissembourg petite ville dans le
                     nord du Bas-Rhin. J’habite a Soultz sous Foret, village dans le Bas-Rhin. J'ai plusieurs Hobbies, la
@@ -55,7 +55,7 @@
                     bien sur l'électro-technique et l'informatique. J'ai aussi d'autre hobbies qu'on peut découvrir sur
                     la page mes hobbies.
                 </paragraphe>
-                <paragraphe class="C2">
+                <paragraphe class="b1">
                     Parcours scolaire :
                     De la maternelle au Collège j’ai suivi un parcours bilingue ou j’ai obtenu mon brevet en français et
                     allemand et ma certification de niveau A2 en Allemand au collège de l'outre-forêt. Au Lycée
@@ -71,7 +71,7 @@
         <h3>Pourquoi j'ai rejoint le BUT RT?</h3>
         <beta class="beta">
             <paragraphe class="D">
-                <paragraphe class="D1">
+                <paragraphe class="b1">
                     J'ai rejoint le But Réseaux et Télécoms car j'ai toujours été intéresser par l'électro-technique et
                     l'informatique. Mon grand-père était professeur d'électrotechnique et mon père est technicien laser
                     et depuis que je suis petit je baigne dans l'électro-technique. Au collège je me suis un peu
@@ -90,7 +90,7 @@
         <Delta class="Delta">
             <img id=photo3 src="Page 1/Photo/photo3.jpg">
             <paragraphe class="E">
-                <paragraphe class="E1">
+                <paragraphe class="b1">
                     Objectifs Personnel:
                     Mes objectifs sont de réussir mes objectifs professionnels mais aussi de passer mon diplome
                     d'accompagnateur en moyenne montagne. Je voudrais aussi faire de grande randonné comme saint jacques
