--- a/Page 1/HTML/Anglais/Page Anglais.html
+++ b/Page 1/HTML/Anglais/Page Anglais.html
@@ -19,7 +19,7 @@
                     <a href="https://e-portfolio.uha.fr/">Portfolio</a>
                 </li>
                 <li>
-                    <a href="../Français/GuittetOlivierPage1.html">Mon Site Web(Français)</a>
+                    <a href="../../../index.html">Mon Site Web(Français)</a>
                 </li>
                 <li>
                     <a href="https://github.com/Thesee67">GitHub</a>
@@ -31,10 +31,10 @@
                     Hello I am Guittet Olivier and this is my website
                 </article>
 
-                <article class="b2">
+                <article class="b1">
                     On this website you will find information about my professional and personal activities.
                 </article>
-                <article class="b3">
+                <article class="b1">
                     Above the link you can access the information about my hobbies.
                 </article>
             </article>
@@ -47,7 +47,7 @@
         <pife class="pife">
             <img id=fond src="../../Photo/photo1.jpg">
             <paragraphe class="C">
-                <paragraphe class="C1">
+                <paragraphe class="b1">
                     Personal background:
                     My name is Guittet Olivier, i was born on 17 November 2004 in Wissembourg, a small town in
                     the north
@@ -60,7 +60,7 @@
                     have
                     other hobbies that you can discover on the page my hobbies.
                 </paragraphe>
-                <paragraphe class="C2">
+                <paragraphe class="b1">
                     Academic background :
                     From kindergarten to secondary school i followed a bilingual pathway where i obtained my
                     brevet in
@@ -76,7 +76,7 @@
         <h3>Why did i join the BUT RT?</h3>
         <beta class="beta">
             <paragraphe class="D">
-                <paragraphe class="D1">
+                <paragraphe class="b1">
                     I joined the BUT Networks and Telecoms because i have always been interested in electrical
                     engineering and computing. My grandfather was an electrical engineering teacher and my
                     father is a
@@ -102,7 +102,7 @@
         <Delta class="Delta">
             <img id=photo3 src="../../Photo/photo3.jpg">
             <paragraphe class="E">
-                <paragraphe class="E1">
+                <paragraphe class="b1">
                     Personal objectives:
                     My goals are to succeed in my professional objectives but also to pass my diploma of
                     mountain
