--- a/Page 2/HTML/GuittetOlivierPage2.html
+++ b/Page 2/HTML/GuittetOlivierPage2.html
@@ -13,7 +13,7 @@
 
         <ul class="menu">
             <li>
-                <a href="../../Page 1/HTML/Français/GuittetOlivierPage1.html">Mon site Web</a>
+                <a href="../../index.html">Mon site Web</a>
             </li>
             <li>
                 <a href="../../Page 1/HTML/Anglais/Page Anglais.html">My Web Site</a>
