--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="Page 1/HTML/Anglais/Page Anglais.html">My Web Site(Anglais)</a>
                 </li>
                 <li>
-                    <a href="https://github.com/These67">GitHub</a>
+                    <a href="https://github.com/Thesee-67">GitHub</a>
                 </li>
             </ul>
 
